apps/routers/democl-webhook/democl-cluster-escape.yaml
kind: Service
apiVersion: v1
metadata:
  name: democl-webhook-cluster-escape
  namespace: traefik-staging
spec:
  ports:
    - name: democl-webhook-http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 0
---
kind: Endpoints
apiVersion: v1
metadata:
  name: democl-webhook-cluster-escape
  namespace: traefik-staging
subsets:
- addresses:
  - ip: 10.108.45.70
  ports:
  - port: 80
    name: democl-webhook-http
