apps/routers/democl-webhook/democl-webhook-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: democl-webhook
  namespace: traefik-staging
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`democl-webhook.hephy.pro`)
    services:
    - kind: Service
      name: democl-webhook-cluster-escape
      namespace: traefik-staging
      port: 80
#--- # Make sure backend is configured for TLS before we enable this
#apiVersion: traefik.containo.us/v1alpha1
#kind: IngressRouteTCP
#metadata:
#  name: democl-webhook-web
#  namespace: traefik-staging
#spec:
#  entryPoints:
#  - websecure
#  routes:
#  - match: HostSNI(`democl-webhook.hephy.pro`)
#    services:
#    - name: democl-webhook-public-ingress
#      namespace: traefik-staging
#      port: 443
#  tls:
#    secretName: democl-webhook-tls
#    passthrough: true
